# trukit

./: AGENTS.md  Cargo.toml  README.md  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/plans/: dev-private-bulletin-pool.md  rust-chain-deploy-tool.md
skills/dotkit/: SKILL.md
src/: chain.rs  config.rs  dotns.rs  env.rs  main.rs  merkle.rs  pool.rs  publisher.rs  registrar.rs  ui.rs
src/bulletin/: mod.rs  storage.rs  upload.rs
src/chain/: asset_hub.rs  config.rs  metadata.rs  mod.rs  revive.rs  signer.rs
src/commands/: account.rs  asset_hub.rs  bulletin.rs  deploy.rs  mod.rs  name.rs
src/dotns/: mod.rs  names.rs  registrar_abi.rs  resolver.rs
