[package]
name = "trikit"
version = "0.1.0"
edition = "2021"
description = "A fast Rust CLI for the Triangle/Trinity ecosystem (Bulletin · DotNS · People)"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
subxt = "0.50"
subxt-signer = "0.50"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
hex = "0.4"
alloy-primitives = "1"
alloy-sol-types = "1"
cid = "0.11"
multihash-codetable = { version = "0.2", features = ["sha2"] }
scale-info = "2.11"
iroh-car = "0.5"
rand = "0.8"
futures = "0.3"

# Added per slice as the surfaces get wired (versions verified 2026-07):
#   rust-unixfs = "0.6"       # UnixFS encoder (Slice 4; pin the SHA)
