[package]
name = "dotkit"
version = "0.1.0"
edition = "2021"
description = "A fast Rust CLI toolkit for the Polkadot ecosystem (Bulletin · DotNS)"

[dependencies]
clap = { version = "4", features = ["derive"] }
anstyle = "1"
anstream = "1"
anyhow = "1"
subxt = "0.50"
subxt-signer = "0.50"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
hex = "0.4"
alloy-primitives = "1"
alloy-sol-types = "1"
cid = "0.11"
ipld-core = "0.4"
rust-unixfs = "0.6"
multihash-codetable = { version = "0.2", features = ["sha2"] }
scale-info = "2.11"
iroh-car = "0.5"
rand = "0.8"
futures = "0.3"
